File: plugins/nexus-coreui-plugin/src/test/java/org/sonatype/nexus/coreui/service/RepositoryUiServiceTest.java